[tool.poetry]
name = "r-compliments"
version = "0.1.0"
description = "Simple reddit bot to redirect users' compliments back at them."
authors = ["Brent Klein <brentcklein@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
praw = "^6.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
